[FIX] fix signout issue, and improve test. Now we check the session and cookie when we sign_in and sign_out

--- a/spec/integration/template/app/views/pages/layouts/default.liquid
+++ b/spec/integration/template/app/views/pages/layouts/default.liquid
@@ -33,6 +33,8 @@ is_layout: true
                Maintenance Odoo
             </div>
         {% endif %}
+        {% block header %}
+        {% endblock %}
         {% block content %}
         {% endblock %}
     </main>
