Finish to add integration test for algolia

--- a/spec/integration/template/app/views/pages/templates/product.liquid
+++ b/spec/integration/template/app/views/pages/templates/product.liquid
@@ -4,4 +4,4 @@ published: true
 handle: product
 ---
 
-{{ product.name }}
+{{ product.name }}{% for variant in product.variants %} {{ variant.name }}{% endfor %}
