[IMP] continue to refactor the code. Use only one drop for all search engine. Start to share code between adapter. Fix search on elastic multi-filtering was not working. Continue to add generic test for all search engine backend

--- a/spec/integration/template/app/views/pages/search-engine/store_products_with_paginate.liquid
+++ b/spec/integration/template/app/views/pages/search-engine/store_products_with_paginate.liquid
@@ -3,7 +3,7 @@ handle: store_products_with_paginate
 slug: store_products_with_paginate
 ---
 {% paginate store.products by 3 %}
-{% for product in paginate.collection %} {{ product.name }}{% endfor %}
+size : {{ paginate.collection | size }}
 total page: {{ paginate.total_pages }}
 total entries: {{ paginate.total_entries }}
 {% endpaginate %}
